Revision history for Sys-Syslog

0.29 -- 2011.04.18 -- Sebastien Aperghis-Tramoni (SAPER) #PerlQA2011
        [BUGFIX] CPAN-RT#55151: Allow temporary facility with native mechanism
        (Tim Jenkins).
        [BUGFIX] CPAN-RT#50928: Convert Win32 files to Unix EOLs (Steve Hay).
        [BUGFIX] CPAN-RT#50534: Unwanted space at the end of syslog message
        (Eugene V. Lyubimkin).
        [BUGFIX] CPAN-RT#49877: Options not reset after closelog() (Herbert Brezina).
        [BUGFIX] CPAN-RT#48386: Add Win32::EventLog as a prerequisite (kmx and
        Laurent Dami).
        [FEATURE] CPAN-RT#50534: Added options noeol and nonul.

0.28 -- 2011.04.16 -- Sebastien Aperghis-Tramoni (SAPER) #PerlQA2011
        [BUGFIX] CPAN-RT#56084: Reset connection tracking vars (Vladimir Marek).
        [BUGFIX] CPAN-RT#56826: Avoid memory corruption when closelog() is
        called twice (Andreas Jaekel).
        [BUGFIX] CPAN-RT#64287: Make strftime() Windows-compatible (Dave Stafford).
        [FEATURE] New API for setlogsock(), in order to allow the setting
        of new options. Thanks to Jake Scott for the idea.
        [CODE] Modify can_load() so it can print the warnings if desired.
        [CODE] CPAN-RT#44410: Provide fallback macros in Syslog.xs in
        order to compile on Novell Netware.
        [TESTS] In blead, the distribution was moved from ext/Sys/Syslog
        to ext/Sys-Syslog. t/constants.t had to be fixed (Vincent Pit).
        [TESTS] CPAN-RT#53317: In core, Sys-Syslog was moved to cpan/, thus
        making t/constants.t unable to find macros.all (David Mitchell).
        [TESTS] CPAN-RT#64716: Skip t/data-validation.t if the available
        version of POE::Component::Server::Syslog is too old.
        [DIST] Bleadperl no longer require an empty MAN3PODS (Nicholas Clark).
        [DIST] Removed unneeded modules in Makefile.PL (Nicholas Clark).
        [DOC] Recreated Sys::Syslog history from the unified git repository.